--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deneme Soruları</title>
+    <title>MedkitapAi - Deneme Soruları</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Deneme Soruları</h1>
+            <h1>MedkitapAi - Deneme Soruları</h1>
         </header>
         
         <!-- Soru listesi bölümü -->
@@ -19,10 +19,6 @@
                     document.write(`
                         <div class="question-item" onclick="showQuestion(${i})">
                             <span>${i}. Soru</span>
-                            <div class="icon-container">
-                                <span class="icon download-icon">&#8681;</span>
-                                <span class="icon play-icon">&#9654;</span>
-                            </div>
                         </div>
                     `);
                 }
