--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
             <button onclick="backToList()" class="back-button">Geri</button>
         </div>
 
-        <!-- Tümünü İndir ve Sil seçenekleri -->
+        <!-- Puan hesaplama bölümü -->
         <footer>
-            <button class="footer-button">Tümünü İndir</button>
-            <button class="footer-button">Tümünü Sil</button>
+            <label for="correct-answers">Doğru Sayısı:</label>
+            <input type="number" id="correct-answers" min="0" max="80" placeholder="0-80" />
+            <button onclick="calculateScore()" class="calculate-button">Puan Hesapla</button>
+            <p id="score-display"></p>
         </footer>
     </div>
 
@@ -57,6 +59,16 @@
         function backToList() {
             document.getElementById("question-display").style.display = "none";
             document.getElementById("question-links").style.display = "block";
+        }
+
+        function calculateScore() {
+            const correctAnswers = parseInt(document.getElementById("correct-answers").value);
+            if (isNaN(correctAnswers) || correctAnswers < 0 || correctAnswers > 80) {
+                alert("Lütfen 0 ile 80 arasında bir sayı girin.");
+                return;
+            }
+            const score = Math.round((correctAnswers / 80) * 100);
+            document.getElementById("score-display").textContent = `Puanınız: ${score} / 100`;
         }
     </script>
 </body>
