--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
             <p id="question-content"></p>
             <button onclick="backToList()" class="back-button">Geri</button>
         </div>
+
+        <!-- Puan hesaplama bölümü -->
+        <footer>
+            <div class="score-calculator">
+                <label for="correct-answers">Doğru Sayısı:</label>
+                <input type="number" id="correct-answers" min="0" max="78" placeholder="0-78" />
+                <button onclick="calculateScore()" class="calculate-button">Puan Hesapla</button>
+                <p id="score-display"></p>
+            </div>
+            <p class="author">Alper Myuksel tarafından hazırlanmıştır.</p>
+        </footer>
     </div>
 
     <script>
@@ -71,6 +82,21 @@
         function backToList() {
             document.getElementById("question-display").style.display = "none";
             document.getElementById("question-links").style.display = "block";
+        }
+
+        // Puan hesaplama
+        function calculateScore() {
+            const correctAnswers = parseInt(document.getElementById("correct-answers").value);
+
+            if (isNaN(correctAnswers) || correctAnswers < 0 || correctAnswers > 78) {
+                alert("Lütfen 0 ile 78 arasında bir doğru sayısı girin.");
+                return;
+            }
+
+            // Puanı hesapla
+            const score = Math.round((correctAnswers / 78) * 100);
+
+            document.getElementById("score-display").textContent = `Puanınız: ${score} / 100`;
         }
     </script>
 </body>
