--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
             <p id="question-content"></p>
             <button onclick="backToList()" class="back-button">Geri</button>
         </div>
-
-        <!-- Puan hesaplama bölümü -->
-        <footer class="score-calculator">
-            <label for="correct-answers">Doğru Sayısı:</label>
-            <input type="number" id="correct-answers" min="0" max="78" placeholder="0-78">
-            <button onclick="calculateScore()" class="calculate-button">Puan Hesapla</button>
-            <p id="score-display"></p>
-        </footer>
-
     </div>
+
+    <!-- Puan hesaplama bölümü (Her zaman sabit en altta) -->
+    <footer class="score-calculator">
+        <label for="correct-answers">Doğru Sayısı:</label>
+        <input type="number" id="correct-answers" min="0" max="78" placeholder="0-78">
+        <button onclick="calculateScore()" class="calculate-button">Puan Hesapla</button>
+        <p id="score-display"></p>
+    </footer>
 
     <script>
         // 1'den 16'ya kadar olan soruların içeriği
