--- a/index.html
+++ b/index.html
@@ -3,97 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MedkitapAi - Deneme Soruları</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Soru Listesi</title>
+    <style>
+        body {
+            background-color: #121212;
+            color: #ffffff;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        h1 {
+            margin: 20px;
+            font-size: 24px;
+        }
+
+        .soru-container {
+            width: 90%;
+            max-width: 600px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .soru-button {
+            background-color: #1f1f1f;
+            color: #ffffff;
+            padding: 15px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            text-align: left;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .soru-button:hover {
+            background-color: #333333;
+        }
+
+        .soru-button:active {
+            background-color: #444444;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>MedkitapAi - Deneme Soruları</h1>
-        </header>
-        
-        <!-- Soru listesi -->
-        <div id="question-links" class="question-list">
-            <script>
-                for (let i = 1; i <= 78; i++) {
-                    document.write(`
-                        <div class="question-item" onclick="showQuestion(${i})">
-                            <span>${i}. Soru</span>
-                        </div>
-                    `);
-                }
-            </script>
-        </div>
-
-        <!-- Soru içeriği -->
-        <div id="question-display" class="question-content" style="display: none;">
-            <h2 id="question-title"></h2>
-            <p id="question-content"></p>
-            <button onclick="backToList()" class="back-button">Geri</button>
-        </div>
+    <h1>Soru Listesi</h1>
+    <div class="soru-container">
+        <!-- Düğmeler buraya otomatik olarak eklenecek -->
     </div>
 
-    <!-- Puan hesaplama bölümü (Her zaman sabit en altta) -->
-    <footer class="score-calculator">
-        <label for="correct-answers">Doğru Sayısı:</label>
-        <input type="number" id="correct-answers" min="0" max="78" placeholder="0-78">
-        <button onclick="calculateScore()" class="calculate-button">Puan Hesapla</button>
-        <p id="score-display"></p>
-    </footer>
-
     <script>
-        // 1'den 16'ya kadar olan soruların içeriği
-        const questionData = {
-            1: { kaynak: "Kalp 2, Sayfa 1-3", ipucu: "Conus arteriosus'un alt kısmını ve sağ ventrikülün üst kısmını besleyen dalı düşünün." },
-            2: { kaynak: "Mediastinum, Sayfa 1-2", ipucu: "Mediastinum superius ve medius'un sınırlarına dikkat edin." },
-            3: { kaynak: "Larynx, Sayfa 3-5", ipucu: "Hyoid kemik ve cartilago thyroidea arasındaki bağlantıya odaklanın." },
-            4: { kaynak: "Burun ve Yapıları, Sayfa 3-6", ipucu: "Septum nasi'yi oluşturan kemik yapıların detaylarına bakın." },
-            5: { kaynak: "Lenfatik Sistem, Sayfa 2-4", ipucu: "Lenf düğümlerinin afferent ve efferent damar yapılarına dikkat edin." },
-            6: { kaynak: "Büyük Damarlar, Sayfa 3-4", ipucu: "Truncus pulmonalis ve bifurcatio trachea'nın komşuluk ilişkilerine bakın." },
-            7: { kaynak: "Kalp 1, Sayfa 6-7", ipucu: "Bu oluğun kalbin yüzeyindeki ana damarlara ne sağladığını düşünün." },
-            8: { kaynak: "Toraks Duvarı, Sayfa 4-5", ipucu: "Boyun ile thorax bağlantısındaki ince zara odaklanın." },
-            9: { kaynak: "Kalp 2, Sayfa 7-8", ipucu: "Embriyolojik olarak geçiş sağlayan yapıların işlevlerine dikkat edin." },
-            10: { kaynak: "Sistemik Pulmoner ve Fetal Dolaşım, Sayfa 4-5", ipucu: "Foramen ovale’nin sol atriuma bağlanan bir yapı olduğunu unutmayın." },
-            11: { kaynak: "Diaphragma, Sayfa 7", ipucu: "Ligamentum arcuatum medianum’un altındaki önemli bir damar yolunu düşünün." },
-            12: { kaynak: "Trakea ve Akciğerler, Sayfa 15", ipucu: "Her segmentin fonksiyonel bağımsızlığını sağlayan yapıya dikkat edin." },
-            13: { kaynak: "Boyun Kökü, Sayfa 3", ipucu: "Sağda truncus brachiocephalicus’un dallarını göz önünde bulundurun." },
-            14: { kaynak: "Klinik Anatomi, Sayfa 6", ipucu: "Solunum sırasında bronşların hareketlerine dikkat edin." },
-            15: { kaynak: "Trakea ve Akciğerler, Sayfa 22", ipucu: "Akciğerin en üst noktasına dikkat ederek damar izlerini düşünün." },
-            16: { kaynak: "Sistemik Pulmoner ve Fetal Dolaşım, Sayfa 9", ipucu: "Ductus arteriosus'un doğumdan sonra neye dönüştüğüne dikkat edin." }
-        };
+        const container = document.querySelector('.soru-container');
 
-        // Soruyu göster
-        function showQuestion(number) {
-            document.getElementById("question-links").style.display = "none"; // Listeyi gizle
-            document.getElementById("question-display").style.display = "block"; // Soruyu göster
-            const question = questionData[number];
-            if (question) {
-                document.getElementById("question-title").textContent = `${number}. Soru`;
-                document.getElementById("question-content").innerHTML = `
-                    <strong>Kaynak:</strong> ${question.kaynak}<br>
-                    <strong>İpucu:</strong> ${question.ipucu}
-                `;
-            } else {
-                document.getElementById("question-title").textContent = `${number}. Soru`;
-                document.getElementById("question-content").textContent = "Bu soruya dair içerik henüz eklenmemiştir.";
-            }
-        }
-
-        // Listeye geri dön
-        function backToList() {
-            document.getElementById("question-display").style.display = "none"; // Soruyu gizle
-            document.getElementById("question-links").style.display = "block"; // Listeyi göster
-        }
-
-        // Puan hesaplama
-        function calculateScore() {
-            const correctAnswers = parseInt(document.getElementById("correct-answers").value);
-            if (isNaN(correctAnswers) || correctAnswers < 0 || correctAnswers > 78) {
-                alert("Lütfen 0 ile 78 arasında bir doğru sayısı girin.");
-                return;
-            }
-            const score = Math.round((correctAnswers / 78) * 100);
-            document.getElementById("score-display").textContent = `Puanınız: ${score} / 100`;
+        // 1'den 78'e kadar düğmeleri oluştur
+        for (let i = 1; i <= 78; i++) {
+            const button = document.createElement('button');
+            button.classList.add('soru-button');
+            button.textContent = `${i}. Soru`;
+            button.addEventListener('click', () => {
+                alert('Web sitesi şu an tasarım aşamasındadır.');
+            });
+            container.appendChild(button);
         }
     </script>
 </body>
