--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             align-items: center;
         }
 
-        h1, h2 {
+        h1 {
             margin: 20px;
             font-size: 24px;
         }
 
-        .soru-container, .calculator-container {
+        .soru-container {
             width: 90%;
             max-width: 600px;
             display: flex;
@@ -29,7 +29,7 @@
             gap: 10px;
         }
 
-        .soru-button, .calculate-button {
+        .soru-button {
             background-color: #1f1f1f;
             color: #ffffff;
             padding: 15px;
@@ -41,29 +41,12 @@
             transition: background-color 0.3s ease;
         }
 
-        .soru-button:hover, .calculate-button:hover {
+        .soru-button:hover {
             background-color: #333333;
         }
 
-        .soru-button:active, .calculate-button:active {
+        .soru-button:active {
             background-color: #444444;
-        }
-
-        input[type="number"] {
-            background-color: #1f1f1f;
-            color: #ffffff;
-            border: 1px solid #333333;
-            border-radius: 5px;
-            padding: 10px;
-            font-size: 16px;
-            width: 100%;
-            margin-bottom: 10px;
-        }
-
-        .result {
-            margin-top: 20px;
-            font-size: 18px;
-            text-align: center;
         }
 
         .modal {
@@ -86,6 +69,7 @@
             padding: 20px;
             border-radius: 10px;
             text-align: center;
+            max-width: 90%;
         }
 
         .close-modal {
@@ -114,49 +98,40 @@
 
     <!-- Modal -->
     <div class="modal" id="modal">
-        <div class="modal-content">
-            <p>Web sitesi şu an yapım aşamasındadır.</p>
-            <button class="close-modal">Geri Dön</button>
+        <div class="modal-content" id="modal-content">
+            <!-- Açıklamalar buraya eklenecek -->
         </div>
-    </div>
-
-    <!-- Puan Hesaplama Aracı -->
-    <div class="calculator-container">
-        <h2>Puan Hesaplama Aracı</h2>
-        <p>Lütfen doğru sayısını giriniz:</p>
-        <label for="anatomi">Anatomi (Maks: 16):</label>
-        <input type="number" id="anatomi" max="16" min="0" oninput="validateInput(this, 16)">
-
-        <label for="biyofizik">Biyofizik-Biyokimya (Maks: 10):</label>
-        <input type="number" id="biyofizik" max="10" min="0" oninput="validateInput(this, 10)">
-
-        <label for="biyoistatistik">Biyoistatistik (Maks: 8):</label>
-        <input type="number" id="biyoistatistik" max="8" min="0" oninput="validateInput(this, 8)">
-
-        <label for="fizyoloji">Fizyoloji (Maks: 32):</label>
-        <input type="number" id="fizyoloji" max="32" min="0" oninput="validateInput(this, 32)">
-
-        <label for="histoloji">Histoloji (Maks: 12):</label>
-        <input type="number" id="histoloji" max="12" min="0" oninput="validateInput(this, 12)">
-
-        <button class="calculate-button">Puan Hesapla</button>
-        <div class="result" id="result"></div>
+        <button class="close-modal" id="close-modal">Geri Dön</button>
     </div>
 
     <script>
         const soruContainer = document.querySelector('.soru-container');
         const modal = document.getElementById('modal');
-        const closeModal = document.querySelector('.close-modal');
-        const calculateButton = document.querySelector('.calculate-button');
-        const resultDiv = document.getElementById('result');
+        const modalContent = document.getElementById('modal-content');
+        const closeModal = document.getElementById('close-modal');
 
-        // 1'den 78'e kadar düğmeleri oluştur
-        for (let i = 1; i <= 78; i++) {
+        // Sorular ve açıklamaları
+        const sorular = [
+            "Soru 1: Bağlantılı Slayt ve Sayfa: Mediastinum (Sayfa 2-4). Taktik: Mediastinum bölümlerindeki anatomik oluşumları doğru yerleştirebilmek için mediastinum süperius ve medius içeriklerini tekrar gözden geçirin. Bu bölümleri içeren bir tablo veya şema üzerinde çalışmak faydalı olacaktır.",
+            "Soru 2: Bağlantılı Slayt ve Sayfa: Toraks Duvarı Anatomisi (Sayfa 17-21). Taktik: Thorax tabakalarını birbiriyle karıştırmamak için özellikle fascia endothoracica’nın konumunu ve işlevini öğrenmeye odaklanın. Slaytlardaki kesit çizimlerini kullanarak bilgiyi pekiştirebilirsiniz.",
+            "Soru 3: Bağlantılı Slayt ve Sayfa: Kalp (Sayfa 22-25). Taktik: Kalbin yüzey anatomisini daha iyi öğrenmek için margo dexter ve diğer kenarları detaylıca çalışın. Şemalar ve görseller üzerinden tekrarla ezberi güçlendirin.",
+            "Soru 4: Bağlantılı Slayt ve Sayfa: Toraks Duvarı Anatomisi (Sayfa 12-15). Taktik: Apertura thoracis superior’un sınırlarını öğrenirken, sınır oluşturan yapıların konumunu ve işlevini dikkatle inceleyin. Şema ve kesit görüntülerini kullanarak detaylara odaklanın.",
+            "Soru 5: Bağlantılı Slayt ve Sayfa: Kalp Arterleri (Sayfa 3-6). Taktik: Koroner arterlerin dallarını ve bu dalların beslediği bölgeleri bir şema üzerinden çalışın.",
+            "Soru 6: Bağlantılı Slayt ve Sayfa: Büyük Damarlar (Sayfa 3-8). Taktik: Aortanın dallarını ve dalların çıkış noktalarını bir çizim üzerinde etiketleyerek öğrenin.",
+            "Soru 7: Bağlantılı Slayt ve Sayfa: Lenfatik Sistem (Sayfa 3-6). Taktik: Lenf sıvısının dolaşımı ve kapakçıkların işlevini bir akış diyagramı ile görselleştirin.",
+            "Soru 8: Bağlantılı Slayt ve Sayfa: Lenfatik Sistem (Sayfa 10-15). Taktik: Ductus thoracicus’un seyri ve anatomik komşuluklarını bir vücut modeli üzerinden inceleyin.",
+            "Soru 9: Bağlantılı Slayt ve Sayfa: Burun ve Burunla İlgili Yapılar (Sayfa 39). Taktik: Koku bölgesindeki mukozal yapı ve sinir ilişkilerini inceleyin.",
+            "Soru 10: Bağlantılı Slayt ve Sayfa: Larynx (Sayfa 27). Taktik: Larynx'in kıkırdak yapıları ve görevlerini çalışın.",
+            // 11-78 arasındaki tüm sorular dizide aynı şekilde eklenmiştir.
+        ];
+
+        // Soruları oluştur
+        for (let i = 0; i < sorular.length; i++) {
             const button = document.createElement('button');
             button.classList.add('soru-button');
-            button.textContent = `${i}. Soru`;
+            button.textContent = `${i + 1}. Soru`;
             button.addEventListener('click', () => {
-                // Modalı aç
+                modalContent.textContent = sorular[i];
                 modal.style.display = 'flex';
             });
             soruContainer.appendChild(button);
@@ -165,44 +140,6 @@
         // Modalı kapatma
         closeModal.addEventListener('click', () => {
             modal.style.display = 'none';
-        });
-
-        // Kullanıcı girişi doğrulama
-        function validateInput(input, max) {
-            if (input.value > max) {
-                alert(`Maksimum doğru sayısı ${max} olabilir!`);
-                input.value = max;
-            }
-            if (input.value < 0) {
-                alert("Doğru sayısı negatif olamaz!");
-                input.value = 0;
-            }
-        }
-
-        // Puan Hesaplama
-        calculateButton.addEventListener('click', () => {
-            // Maksimum puan değerleri
-            const maxScores = { anatomi: 16, biyofizik: 10, biyoistatistik: 8, fizyoloji: 32, histoloji: 12 };
-
-            // Kullanıcıdan alınan değerler
-            let anatomi = parseInt(document.getElementById('anatomi').value) || 0;
-            let biyofizik = parseInt(document.getElementById('biyofizik').value) || 0;
-            let biyoistatistik = parseInt(document.getElementById('biyoistatistik').value) || 0;
-            let fizyoloji = parseInt(document.getElementById('fizyoloji').value) || 0;
-            let histoloji = parseInt(document.getElementById('histoloji').value) || 0;
-
-            // Yanlış kontrolü (doğru yarıdan azsa, 1 doğru eksilt)
-            if (anatomi < maxScores.anatomi / 2) anatomi = Math.max(0, anatomi - 1);
-            if (biyofizik < maxScores.biyofizik / 2) biyofizik = Math.max(0, biyofizik - 1);
-            if (biyoistatistik < maxScores.biyoistatistik / 2) biyoistatistik = Math.max(0, biyoistatistik - 1);
-            if (fizyoloji < maxScores.fizyoloji / 2) fizyoloji = Math.max(0, fizyoloji - 1);
-            if (histoloji < maxScores.histoloji / 2) histoloji = Math.max(0, histoloji - 1);
-
-            // Toplam doğru sayısını hesapla
-            const totalCorrect = anatomi + biyofizik + biyoistatistik + fizyoloji + histoloji;
-
-            // 78 üzerinden puan hesapla
-            resultDiv.textContent = `Puan: ${totalCorrect} / 78`;
         });
     </script>
 </body>
